--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "run-sequence": "^2.2.1"
+  },
+  "dependencies": {
+    "gulp-gh-pages": "^0.5.4"
   }
 }
