--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ranked.codingee.com",
   "name": "ranked-seo-rank-tracker",
   "version": "1.1.0",
   "description": "ranKED is a SaaS (Software as a Service) that automates the SEO tasks by tracking the ranks of the targeted keywords of your websites across different search engines and regions to help create SEO strategies and better target the audience and viewers.",
@@ -26,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-file-include": "^2.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-rimraf": "^0.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
